--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "sass": "sass-lint-vue"
   },
   "dependencies": {
-    "axios": "^0.18.0",
     "vue": "^2.5.16",
     "vue-axios": "^2.1.4",
     "vue-resource": "^1.5.1",
@@ -21,6 +21,7 @@
     "@vue/cli-service": "^3.0.0-beta.15",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.0.1",
+    "vue-svg-inline-loader": "^1.2.15",
     "vue-template-compiler": "^2.5.16"
   },
   "browserslist": [
