--- a/package.json
+++ b/package.json
@@ -1,32 +1,21 @@
 {
-  "name": "cursief",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
-    "sass": "sass-lint-vue"
-  },
-  "dependencies": {
-    "vue": "^2.5.16",
-    "vue-axios": "^2.1.4",
-    "vue-resource": "^1.5.1",
-    "vue-router": "^3.0.1",
-    "vuex": "^3.0.1"
-  },
-  "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.0.0-beta.15",
-    "@vue/cli-plugin-eslint": "^3.0.0-beta.15",
-    "@vue/cli-service": "^3.0.0-beta.15",
-    "node-sass": "^4.9.0",
-    "sass-loader": "^7.0.1",
-    "vue-svg-inline-loader": "^1.2.15",
-    "vue-template-compiler": "^2.5.16"
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not ie <= 8"
-  ]
+	"name": "2devs",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"author": "",
+	"license": "ISC",
+	"homepage": "https://github.com/cursief/",
+	"dependencies": {
+		"browser-sync": "^2.26.3",
+		"browsersync": "0.0.1-security",
+		"del": "^4.0.0",
+		"gulp": "^4.0.0",
+		"gulp-autoprefixer": "^6.0.0",
+		"gulp-notify": "^3.2.0",
+		"gulp-sass": "^4.0.2"
+	}
 }
