--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
 		"del": "^4.0.0",
 		"gulp": "^4.0.0",
 		"gulp-autoprefixer": "^6.0.0",
+		"gulp-concat": "^2.6.1",
 		"gulp-notify": "^3.2.0",
-		"gulp-sass": "^4.0.2"
+		"gulp-sass": "^4.0.2",
+		"gulp-uglify": "^3.0.2",
+		"readable-stream": "^3.4.0"
 	}
 }
