--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
 		"gulp": "^4.0.0",
 		"gulp-autoprefixer": "^6.0.0",
 		"gulp-concat": "^2.6.1",
+		"gulp-file": "^0.4.0",
 		"gulp-notify": "^3.2.0",
 		"gulp-sass": "^4.0.2",
-		"gulp-uglify": "^3.0.2",
-		"readable-stream": "^3.4.0"
+		"readable-stream": "^3.4.0",
+		"rollup": "^1.16.6",
+		"rollup-plugin-terser": "^5.1.0"
 	}
 }
