--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"gulp-concat": "^2.6.1",
 		"gulp-notify": "^3.2.0",
 		"gulp-sass": "^4.0.2",
+		"gulp-sourcemaps": "^2.6.5",
 		"readable-stream": "^3.4.0",
 		"rollup": "^1.16.6",
 		"rollup-plugin-sourcemaps": "^0.4.2",
