feat(email): Add email functionality to contact form.

--- a/gulp-config.json
+++ b/gulp-config.json
@@ -1,6 +1,8 @@
 {
 	"source": "src",
   "destination": "dist",
+  "port": 3000,
+  "members": "./members.json",
   "js": {
     "bundleName": "app.js"
   }
