--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
 		"gulp": "^4.0.0",
 		"gulp-autoprefixer": "^6.0.0",
 		"gulp-concat": "^2.6.1",
+		"gulp-connect-php": "^1.0.3",
 		"gulp-notify": "^3.2.0",
+		"gulp-replace": "^1.0.0",
 		"gulp-sass": "^4.0.2",
 		"gulp-sourcemaps": "^2.6.5",
 		"readable-stream": "^3.4.0",
